materializecss - новая тема для сайта

--- a/config.yaml
+++ b/config.yaml
@@ -5,10 +5,12 @@ publishdir: "public"
 taxonomies:
   category: "categories"
 baseurl: "http://skulsky.ru/"
-title: "Алексей Скульский. Тексты. Рассказы"
+title: "Алексей Скульский"
 canonifyurls: true
 theme: "skulsky"
 paginate: 5
+pluralizelisttitles: false
 params:
-  description: "Зарисовки и размышления"
+  description: "Тексты, рассказы, зарисовки и размышления"
+  about: "В толковом словаре Ушакова понятие «текст» определяется как «всякая запечатленная в письменности или в памяти речь, написанные или сказанные кем-н. слова, к-рые можно воспроизвести, повторить в том же виде».  Именно как к текстам я отношусь к тому, что пишу и публикую на этом сайте. Литературу оставим писателям. Эти тексты и есть моя биография."
 ...
